# docs/swagger.json
@@ -1,8 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Solution for backend task of https://sites.google.com/relaxdays.de/hackathon-relaxdays/startseite",
-        "title": "Backend Tasks",
+        "description": "Solution for 'Lager' backend task of https://sites.google.com/relaxdays.de/hackathon-relaxdays/startseite#h.n7504a3wvsj5",
+        "title": "Storage Backend Task",
         "contact": {
             "name": "Justin Kromlinger",
             "url": "https://hashworks.net",
@@ -17,92 +17,6 @@
     "host": "127.0.0.1:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/purchase": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Purchase"
-                ],
-                "summary": "Save a purchase",
-                "parameters": [
-                    {
-                        "description": "Purchase to save",
-                        "name": "purchase",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Purchase"
-                        }
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": ""
-                    },
-                    "400": {
-                        "description": "Invalid purchase",
-                        "schema": {
-                            "type": ""
-                        }
-                    }
-                }
-            }
-        },
-        "/purchases": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Purchase"
-                ],
-                "summary": "Returns all saved purchases",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Purchase"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/purchasesForArticle/{articleId}": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Purchase"
-                ],
-                "summary": "Returns all saved purchases for a given article",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "ID of article to query",
-                        "name": "articleId",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Purchase"
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/storage/": {
             "get": {
                 "tags": [
@@ -174,20 +88,6 @@
         }
     },
     "definitions": {
-        "models.Purchase": {
-            "type": "object",
-            "properties": {
-                "articleID": {
-                    "type": "integer"
-                },
-                "lieferant": {
-                    "type": "string"
-                },
-                "menge": {
-                    "type": "integer"
-                }
-            }
-        },
         "models.Storage": {
             "type": "object",
             "properties": {
